Fix sidebar overflow

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ html, body {
   background-color: #ff4d4d;
   color: #ffffff;
   position: fixed;
+  overflow-x: hidden;
   z-index: 1;
   top: 0;
   left: 0;
@@ -34,6 +35,7 @@ html, body {
 
 .sidebar ul {
   display: block;
+  height: 100%;
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -66,6 +68,7 @@ html, body {
   padding: 1.0em;
   overflow-y: scroll;
   height: 100%;
+  box-shadow: 10px 10px 5px #888888;
 }
 
 /* Header */
